# fastapi-ddd-template

./: .gitignore  Makefile  README.md  pyproject.toml
src/project_name/: config.py
src/project_name/adapters/: orm.py  repository.py
src/project_name/services/: unit_of_work.py
tests/: conftest.py
