[tool.poetry]
name = "{project name}"
version = "0.1.0"
description = "{project description}"
authors = ["{name} <{email}>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.36"
uvicorn = "^0.17.6"
psycopg2 = "^2.9.3"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
pylint = "^2.13.9"
pylint-pytest = "^1.1.2"
mypy = "^0.950"
mypy-extensions = "^0.4.3"
sqlalchemy2-stubs = "^0.0.2-alpha.22"
requests = "^2.27.1"
types-requests = "^2.27.26"

[tool.mypy]
exclude = [
    "tests/",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
